--- a/StockInventry/StockInventry/StockInventry.csproj
+++ b/StockInventry/StockInventry/StockInventry.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin.cs" />
     <Compile Include="DataBase.cs" />
     <Compile Include="InterfaceHandler.cs" />
     <Compile Include="Product.cs" />
